矩形に変更

--- a/chart.html
+++ b/chart.html
@@ -69,14 +69,14 @@
                     label: '幸福',
                     data: [6, 6, 0, 0,6,6,6,6,6,6,6,6],
                     animation : true,
-                    //...各設定
+                    steppedLine: true,
                 },
                 {
                     label: '怒り',
                     backgroundColor: "rgba(255,0,0,0.4)",
                     data: [0, 0, 6, 6,0,0,0,0,0,0,0,0],
                     animation : true,
-                    //...各設定
+                    steppedLine: true,
                 }]
             },
             options: {
